--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
+  "devDependencies": {
+    "lodash": ">=4.17.13",
+    "lodash.template": ">=4.5.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
